pr page updated

--- a/style.css
+++ b/style.css
@@ -94,3 +94,21 @@ h6 {
 	  background-repeat: no-repeat;
 	  background-position: 50% 50%;
   }
+
+  .linktree-pr {
+	width: 120px;
+	height: 120px;
+	background-image: url("./pastores/pr-icon.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: 25% 18%;
+}
+
+.linktree-sac {
+	width: 120px;
+	height: 120px;
+	background-image: url("./colaboradores/sac-icon.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: 25% 18%;
+}
