--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ h6 {
 .linktree-empresa {
 	width: 120px;
 	height: 120px;
-	background-image: url("./colaboradores/sac-icon.jpg");
+	background-image: url("./pastores/empresa-icon.png");
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: 25% 18%;
