base-pe button added
update empresa-icon and base-pe button

--- a/pastores/style-contato-empresa.css
+++ b/pastores/style-contato-empresa.css
@@ -89,7 +89,7 @@ h6 {
   .linktree {
 	  width: 120px;
 	  height: 120px;
-	  background-image: url("./pastores/empresa-icon.jpg");
+	  background-image: url("empresa-icon.png");
 	  background-size: cover;
 	  background-repeat: no-repeat;
 	  background-position: 50% 50%;
