--- a/pastores-pe/acesso-crm-igrejas/src/index.haml
+++ b/pastores-pe/acesso-crm-igrejas/src/index.haml
@@ -1,80 +1,113 @@
 %h1
-  Providers
+  Acessos CRM Igrejas - PE
 %p
-  (An example table + detail view scenario)
+  (Clique aqui para acessar a plataforma)
 %main
   %table
     %thead
       %tr
         %th
-          Provider Name
+          Igrejas
         %th
           E-mail
         %th
     %tfoot
       %tr
         %th{:colspan => "3"}
-          Year: 2014
+          Última atualização: 20/07/2023
     %tbody
       %tr
         %td{:data => {:title => "Provider Name"}}
-          Iacob Geaorgescu
+          Catedral da Fé
         %td{:data => {:title => "E-mail"}}
-          e-mail@test-email.com
+          pe_pernambuco_001017005001@universal.org
         %td{:class => "select"}
           %a{:href => "#",:class => "button"}
-            Select
+            Detalhes
       %tr
         %td{:data => {:title => "Provider Name"}}
-          Julius Neumann
+          Mário Melo
         %td{:data => {:title => "E-mail"}}
-          e-mail@test-email.com
+          pe_pernambuco_001017005001@universal.org
         %td{:class => "select"}
           %a{:href => "#",:class => "button"}
-            Select
+            Detalhes
       %tr
         %td{:data => {:title => "Provider Name"}}
-          Christoph Koller
+          Afogados
         %td{:data => {:title => "E-mail"}}
-          e-mail@test-email.com
+          pe_afogados_001017005004@universal.org
         %td{:class => "select"}
           %a{:href => "#",:class => "button"}
-            Select
+            Detalhes
       %tr
         %td{:data => {:title => "Provider Name"}}
-          Bram Lemmens
+          Encruzilhada
         %td{:data => {:title => "E-mail"}}
-          e-mail@test-email.com
+          pe_encruzilhada_001017005113@universal.org
         %td{:class => "select"}
           %a{:href => "#",:class => "button"}
-            Select
+            Detalhes
   %div.detail
     %div.detail-container
       %dl
         %dt
-          Provider Name
+          Igreja
         %dd
-          John Doe
+          Catedral da Fé
         %dt
-          E-mail
+          Região
         %dd
-          email@example.com
+          Sede Estadual
         %dt
-          City
+          Bloco
         %dd
-          Detroit
+          Recife
         %dt
-          Phone-Number
+          Login
         %dd
-          555-555-5555
+          pe_pernambuco_001017005001
         %dt
-          Last Update
+          Senha
         %dd
-          Jun 20 2014
+          7IKn0OLS
         %dt
-          Notes
+          Endereço
         %dd
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.
+          Av. Cruz Cabugá, nº 141, Santo Amaro, Recife, PE, CEP: 50.040-000
+        %dt
+        %dt
+          Situação
+        %dd
+          Própria
+        %dt
+          Capacidade
+        %dd
+          4.700 lugares
+        %dt
+          Pastor Responsável
+        %dd
+          Joel Fernandes
+        %dt
+          Contato
+        %dd
+          (81) 98191-8218
+        %dt
+          CNPJ
+        %dd
+          29.744.778/3767-23
+        %dt
+          Data de Inauguração
+        %dd
+          10/04/2005
+        %dt
+          Última Atualização
+        %dd
+          20/07/2023
+        %dt  
+          Observações
+        %dd
+          Sede Estadual.Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.
     %div.detail-nav
       %button.close
-        Close
+        Fechar
